1. For the "Add to Collection" link, drop the use of a custom DS field. Instead, for the search results node view, use a contextual link, and for the full node view use a primary nav tab. This means that the text surrounding the link is no longer updated with the confirmation that the node was added to the collection, because there is not enough space for that. Instead, forthcoming, the confirmation will appear in another (or existing) modal. 2. New helper function ma_collection_get_valid_node_types_for_collection() which returns valid node types for a collection as well as the entity reference field in the collection for that node type. Currently there is only the DH nodes that can be added to collections, but now it will be easy to add other types to Collections once that is requested. The Add to Collection code is using this function, so that will work right away, but some of the older collectons code will need to be updated to use this new function, at that time. 3. CSS tweak to the loading spinner on the modal, to position it better since it was too high after the modal header was removed.

--- a/sites/all/themes/mukurtu_starter/css/style.css
+++ b/sites/all/themes/mukurtu_starter/css/style.css
@@ -10618,3 +10618,6 @@ a:hover {
 .modal-add-to-collection .modal-header {
   display: none;
 }
+.modal-add-to-collection .loading-spinner {
+  top: 25px !important;
+}
