--- a/sites/all/themes/mukurtu_starter/less/content.less
+++ b/sites/all/themes/mukurtu_starter/less/content.less
@@ -1172,4 +1172,7 @@ a.tooltips span {
   .modal-header {
     display: none;
   }
+  .loading-spinner {
+    top: 25px !important;
+  }
 }
